--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="main.css">
     <!-- bs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- aos -->
     <!-- icon -->
     <link rel="icon" href="img/Logo.jpg">
@@ -55,9 +56,38 @@
         <div class="container">
             <div class="text__informacion">
                 <h2 class="text">Porque elegirnos?</h2>
-                <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, assumenda quibusdam ullam laboriosam laborum reprehenderit harum, aut ipsam temporibus magnam id sequi quis voluptate suscipit, dolores deserunt. Ab, non numquam!</p>
+                <p class="parrafo">K-Viajes es una empresa licenciada para viajes turisticos a todo el mundo! Nuestra empresa cuenta con una sede donde podra comprar los boletos, y nuestra terminal donde abordara los bus.</p>
             </div>
         </div>
+
+        <section class="cards__section">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/img2.jpg" class="card-img-top" alt="img2" height="200px">
+                <div class="card-body">
+                  <h5 class="card-title">Belgica</h5>
+                  <p class="card-text">Nuestros clientes siempre optan este maravilloso lugar por sus lagos y montañas.</p>
+                  <a href="#" class="btn btn-light">Visitar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="./img/img3.jpg" class="card-img-top" alt="img3" height="200px">
+                <div class="card-body">
+                  <h5 class="card-title">Nevada</h5>
+                  <p class="card-text">Sus montañas altas es lo que cualquier persona quisiera visitar en unas lindas vacaciones</p>
+                  <a href="#" class="btn btn-light">Visitar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="./img/img4.jpg" class="card-img-top" alt="img4" height="200px">
+                <div class="card-body">
+                  <h5 class="card-title">Canada</h5>
+                  <p class="card-text">Simplemente el lugar magnifico para unas buenas vacaciones, paisajes hermosos</p>
+                  <a href="#" class="btn btn-light">Visitar</a>
+                </div>
+            </div>
+        </section>
     </main>
     
 
@@ -80,6 +110,8 @@
 
 
 
+    <!-- bs -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- js -->
     <script src="./js/miarchivo.js"></script>
     <!-- font awesome -->
